tests/baselines/reference/checkJsTypeDefNoUnusedLocalMarked.errors.txt
file.ts(2,5): error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
something.js(5,29): error TS2352: Conversion of type 'undefined' to type 'FooFun' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.


==== file.ts (1 errors) ====
    class Foo {
        x: number;
        ~
!!! error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
    }
    
    declare global {
        var module: any; // Just here to remove unrelated error from test
    }
    
    export = Foo;
==== something.js (1 errors) ====
    /** @typedef {typeof import("./file")} Foo */
    
    /** @typedef {(foo: Foo) => string} FooFun */
    
    module.exports = /** @type {FooFun} */(void 0);
                                ~~~~~~
!!! error TS2352: Conversion of type 'undefined' to type 'FooFun' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.